// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, hasSlottedAnchor: false and compact: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--p-radius-full) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px);
  gap: 0;
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: unset !important;
  white-space: nowrap;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: 0;
}
@media (min-width: 480px) {
  :host {
    border-radius: var(--_p-link-button-a) !important;
  }
  .root {
    padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
      calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(
      -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
    );
  }
}
@media (min-width: 760px) {
  :host {
    border-radius: var(--p-radius-full) !important;
  }
  .root {
    padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px);
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}
@media (min-width: 1000px) {
  :host {
    border-radius: var(--_p-link-button-a) !important;
  }
  .root {
    padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
      calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(
      -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
    );
  }
}
@media (min-width: 1300px) {
  :host {
    border-radius: var(--p-radius-full) !important;
  }
  .root {
    padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px);
    gap: 0;
  }
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
  .icon {
    margin-inline-start: 0;
  }
}
@media (min-width: 1760px) {
  :host {
    border-radius: var(--_p-link-button-a) !important;
  }
  .root {
    padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
      calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
    gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
  }
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .icon {
    margin-inline-start: calc(
      -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
    );
  }
}
@media (forced-colors: active) {
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
  .root:focus-visible {
    outline-color: Highlight;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, hasSlottedAnchor: false and compact: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.root:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
  .root:focus-visible {
    outline-color: Highlight;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, hasSlottedAnchor: true and compact: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-xl) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, hasSlottedAnchor: true and compact: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-xl) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: primary, hideLabel: false, hasSlottedAnchor: true and compact: true 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 0.64285714;
  --_p-link-button-a: var(--p-radius-lg);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-lg) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, hasSlottedAnchor: true and compact: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-xl) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-frosted-strong);
  color: var(--p-color-primary);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-frosted);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-right, iconSource: , variant: secondary, hideLabel: false, hasSlottedAnchor: true and compact: false 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-xl) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-frosted-strong);
  color: var(--p-color-primary);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
.icon {
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  margin-inline-start: calc(
    -1 * (11.2px * (var(--_p-link-a) - 0.64285714) + 4px)
  );
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-frosted);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: none, iconSource: , variant: primary, hideLabel: false, hasSlottedAnchor: true and compact: false 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  --_p-link-a: 1;
  --_p-link-button-a: var(--p-radius-xl);
  border-radius: var(--_p-link-button-a) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset: 0 !important;
  border-radius: var(--p-radius-xl) !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: min-content;
  box-sizing: border-box;
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  border-radius: inherit;
  transform: translate3d(0, 0, 0);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    border-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
  padding: calc(28px * (var(--_p-link-a) - 0.64285714) + 6px)
    calc(33.6px * (var(--_p-link-a) - 0.64285714) + 16px);
  gap: calc(11.2px * (var(--_p-link-a) - 0.64285714) + 4px);
}
.label {
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: unset !important;
  white-space: normal;
}
@media (forced-colors: active) {
  ::slotted(a:focus-visible)::before {
    outline-color: Highlight !important;
  }
  .root {
    forced-color-adjust: none;
    background: Canvas;
    color: LinkText;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .root:is(button) {
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
}
@media (hover: hover) {
  .root:hover {
    background-color: var(--p-color-contrast-high);
  }
  @media (forced-colors: active) {
    .root:hover {
      background: Canvas;
    }
  }
}
"
`;
